# googleSheetsWithGPT_5PJS

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  __init__.py  __main__.py  docker-compose.yml  gdrive_gpt_app.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: test.yml
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  SETUP.md
src/: __init__.py  config.py
src/adapters/: __init__.py  cache.py  google_drive.py  openai_client.py
src/api/: dependencies.py  main.py
src/api/routes/: analysis.py  exports.py  spreadsheets.py
src/cli/: main.py
src/domain/: __init__.py  exceptions.py  models.py
src/services/: __init__.py  analyzer.py  batch.py  data_loader.py  export.py  scheduler.py
tests/: conftest.py
tests/unit/: test_analyzer.py  test_api_routes.py  test_batch.py  test_cache.py  test_config.py  test_data_loader.py  test_export.py  test_scheduler.py
